# tfhe

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Doxyfile  Gemfile  LICENSE  Makefile  README.md  _config.yml  autogenerated.cpp  autogenerated.h  code_autogen.pl  coding.md  doxygen.conf  fft_processor_fftw.cpp  fft_processor_nayuki.cpp  gate-bootstrapping-api.md  index.html  index.md  installation.md  lwe-functions.cpp  lwe-functions.h  lwe.cpp  lwe.h  lwebootstrappingkey.cpp  lwebootstrappingkey.h  lwekey.cpp  lwekey.h  lwekeyswitch.cpp  lwekeyswitch.h  lweparams.cpp  lweparams.h  lwesamples.cpp  lwesamples.h  multiplication.cpp  multiplication.h  (+24 more)
bench/: CMakeLists.txt  bench_allocator.cpp  bench_bigint.cpp  bench_bigreal.cpp  bench_bigtorus.cpp
libtfhe/: CMakeLists.txt
libtfhe/core/: CMakeLists.txt
libtfhe/core/allocator/: FirstStackAllocator.cpp  FirstStackAllocator.h  MallocAllocator.cpp  MallocAllocator.h  StackAllocator.cpp  StackAllocator.h  StrictMallocAllocator.cpp  StrictMallocAllocator.h  TFHEAllocator.cpp  TFHEAllocator.h  ValgrindAllocator.cpp  ValgrindAllocator.h  allocator-shortcut-functions.h  allocator.h
libtfhe/core/arithmetic/: BigInt.cpp  BigInt.h  BigTorus.cpp  BigTorus.h  big_int.cpp  big_int.h  big_real.cpp  big_real.h  big_torus.cpp  big_torus.h  lagrangehalfc_arithmetic.h  lagrangehalfc_impl.cpp  lagrangehalfc_impl.h  lagrangehalfc_impl_fma.s  multiplication.cpp  numeric_functions.h  numeric_utils.h  polynomial.cpp  polynomial.h  polynomial_big.cpp  polynomial_common.h  polynomial_common_big.cpp  polynomial_int.cpp  polynomial_int.h  polynomial_int_big.cpp  polynomial_int_big.h  polynomial_param.h  polynomial_torus.cpp  polynomial_torus.h  polynomial_torus_big.cpp  polynomial_torus_big.h  polynomials.cpp  polynomials.h  polynomials_arithmetic.cpp  polynomials_arithmetic.h  polynomials_multiplication.cpp  random_gen.cpp  random_gen.h  random_gen_big.cpp  real_param.cpp  (+12 more)
libtfhe/core/arithmetic/generic/: asm_mode.h  coeff_type.h  polynomial.cpp  polynomial.h  polynomial_big.cpp  polynomial_big.h  polynomial_int.cpp  polynomial_int.h  polynomial_int_big.cpp  polynomial_int_big.h  polynomial_int_primitive.h  polynomial_param.h  polynomial_primitive.h  polynomial_torus.cpp  polynomial_torus.h  polynomial_torus_big.cpp  polynomial_torus_big.h  polynomial_torus_generic.h  polynomial_torus_primitive.h  polynomial_torus_sml.cpp  zmodule_vector.h  zmodule_vector_big.h  zmodule_vector_params.h  zmodule_vector_primitive.h
libtfhe/core/arithmetic/portable/: polynomial_big.cpp  polynomial_int_big.cpp  polynomial_int_primitive.cpp  polynomial_primitive.cpp  polynomial_torus_big.cpp  polynomial_torus_primitive.cpp  zmodule_vector_big.cpp  zmodule_vector_primitive.cpp
libtfhe/core/contexts/: castable_unique_ptr.cpp  castable_unique_ptr.h  context_object_creator.cpp  context_object_creator.h  tfhe_global_context.cpp  tfhe_global_context.h  tfhe_thread_context.cpp  tfhe_thread_context.h
src/: CMakeLists.txt  doxygen.conf  make_distclean
src/include/: autogenerated.h  lagrangehalfc_arithmetic.h  lwe-functions.h  lwe.h  lwebootstrappingkey.h  lwekey.h  lwekeyswitch.h  lweparams.h  lwesamples.h  multiplication.h  numeric-functions.h  numeric_functions.h  polynomials.h  polynomials_arithmetic.h  random_gen.h  tfhe.h  tfhe_alloc.h  tfhe_core.h  tfhe_functions.h  tfhe_garbage_collector.h  tfhe_gate.h  tfhe_gate_bootstrapping_functions.h  tfhe_gate_bootstrapping_structures.h  tfhe_gate_functions.h  tfhe_generic_streams.h  tfhe_generic_templates.h  tfhe_io.h  tgsw.h  tgsw_functions.h  tlwe.h  tlwe_functions.h
src/libtfhe/: CMakeLists.txt  autogenerated.cpp  boot-gates.cpp  lwe-bootstrapping-functions-fft.cpp  lwe-bootstrapping-functions.cpp  lwe-functions.cpp  lwe-keyswitch-functions.cpp  lwe.cpp  lwebootstrappingkey.cpp  lwekey.cpp  lwekeyswitch.cpp  lweparams.cpp  lwesamples.cpp  multiplication.cpp  numeric-functions.cpp  polynomials.cpp  random_gen.cpp  ringlwefftoperations.cpp  tfhe_garbage_collector.cpp  tfhe_gate_bootstrapping.cpp  tfhe_gate_bootstrapping_structures.cpp  tfhe_generic_streams.cpp  tfhe_io.cpp  tgsw-fft-operations.cpp  tgsw-functions.cpp  tgsw.cpp  tlwe-fft-operations.cpp  tlwe-functions.cpp  tlwe.cpp  tlwefftoperations.cpp  toruspolynomial-functions.cpp
src/libtfhe/fft_processors/: CMakeLists.txt
src/libtfhe/fft_processors/fftw/: CMakeLists.txt  fft_processor_fftw.cpp  lagrangehalfc_impl.cpp  lagrangehalfc_impl.h
src/libtfhe/fft_processors/nayuki/: CMakeLists.txt  fft-model-of-x8664-avx.c  fft-portable.c  fft-test.c  fft-x8664-avx-aux.c  fft-x8664-avx-reverse.s  fft-x8664-avx.s  fft_processor_nayuki.cpp  lagrangehalfc_impl.cpp  lagrangehalfc_impl.h  readme.txt
src/libtfhe/fft_processors/poc/: CMakeLists.txt  Makefile  Makefile.old  fft_processor_poc.cpp  lagrangehalfc_impl.h  lagrangehalfc_impl_asm.s  poc-bench.cpp  poc-fft-avx.s  poc-fft-fma.s  poc-fft-impl.cpp  poc-fft-unaligned.s  poc-fft.h  poc-fft.s  poc-ifft-avx.s  poc-ifft-fma.s  poc-ifft-unaligned.s  poc-ifft.s  poc-model.cpp  (+1 more)
src/test/: CMakeLists.txt  arithmetic_test.cpp  boots_gates_test.cpp  bootstrapping_test.cpp  bootstrapping_test_fft.cpp  io_test.cpp  lagrangehalfc_test.cpp  lwe_test.cpp  lwekeyswitch_test.cpp  polynomial_test.cpp  test-addition-boot.cpp  test-bootstrapping-fft.cpp  test-bootstrapping-fft2.cpp  test-bootstrapping.cpp  test-c-binding.c  test-deb-boot.cpp  test-decomp-tgsw.cpp  test-gate-bootstrapping.cpp  test-long-run.cpp  test-lwe.cpp  test-multiplication.cpp  test-tlwe.cpp  test_lut_bootstrapping.cpp  tgsw_fft_test.cpp  tgsw_test.cpp  tlwe_fft_test.cpp  tlwe_test.cpp
src/test/fakes/: lagrangehalfc.h  lwe-bootstrapping-fft.h  lwe-bootstrapping.h  lwe-keyswitch.h  lwe.h  tgsw-fft.h  tgsw.h  tlwe-fft.h  tlwe.h
test/: CMakeLists.txt  test_allocator.cpp  test_bignum.cpp  test_bigreal.cpp  test_random_gen.cpp
test/tfhe_test_extra/: random_gen.h  torus_utils.h
test/tfhetestlib/: CMakeLists.txt  ntl_conversions.cpp  ntl_conversions.h  ntl_utils.cpp  ntl_utils.h  random_sample.cpp  random_sample.h
(+51 files in other folders)
